# solving-stochastic-lights-out

./: LICENSE  README.md  pyproject.toml
experiments/configs/: budget.yaml  q_eval_3x3.yaml  sweep_5x5.yaml
notebooks/: 01_stochastic_check.ipynb  01_stochastic_visualization.ipynb  02_prelim_test_analysis.ipynb  03_statistical_analysis.ipynb  04_q_learning_analysis.ipynb  05_greedy_budget_analysis.ipynb  06_presentation_visualizations.ipynb
results/q_tables/: q_3x3_alpha0.05_lambda0.0001.npy  q_3x3_alpha0.05_lambda0.5.npy  q_3x3_alpha0.05_lambda1.0.npy  q_3x3_alpha0.05_lambda2.0.npy  q_3x3_alpha0.05_lambda5.0.npy  q_3x3_alpha0.1_lambda0.0001.npy  q_3x3_alpha0.1_lambda0.5.npy  q_3x3_alpha0.1_lambda1.0.npy  q_3x3_alpha0.1_lambda2.0.npy  q_3x3_alpha0.1_lambda5.0.npy  q_3x3_alpha0.2_lambda0.0001.npy  q_3x3_alpha0.2_lambda0.5.npy
results/runs/: greedy.csv  prob_greedy_0.csv  prob_greedy_1.csv  prob_greedy_2.csv  prob_greedy_3.csv  prob_greedy_5.csv  risk_averse_0_00.csv  risk_averse_0_25.csv  risk_averse_0_50.csv  risk_averse_1_00.csv  risk_averse_2_00.csv  risk_averse_5_00.csv  standard_rollout_D1.csv  standard_rollout_D2.csv  standard_rollout_D3.csv
results/runs/final/: greedy_budget.csv  prob_greedy.csv  standard_rollout.csv
scripts/: run_parallel.py  train_multiple_q_learning.py  train_q_learning_3x3.py
src/lightsout/: __init__.py  algebra.py  board.py
src/lightsout/evaluation/: metrics.py
src/lightsout/rl/: utils_3x3.py
src/lightsout/stochastic/: kernel.py  simulator.py  viz.py
src/lightsout/strategies/: __init__.py  base.py  chasing_lights.py  (+5 more)
(+5 files in other folders)
